--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.60.0",
     "typescript": "5.0.3",
     "yup": "^1.0.2"
@@ -35,9 +36,13 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "@types/react-slick": "^0.23.10",
     "babel-loader": "^8.3.0",
+    "css-loader": "^6.7.3",
     "eslint-plugin-storybook": "^0.6.11",
+    "postcss-loader": "^7.2.4",
     "storybook-addon-next": "^1.8.0",
-    "storybook-addon-sass-postcss": "^0.1.3"
+    "storybook-addon-sass-postcss": "^0.1.3",
+    "style-loader": "^3.3.2"
   }
 }
